Fixing alignment per issue #32 and speed-select background gradient in Safari.

--- a/jcdsee/jcdsee.css
+++ b/jcdsee/jcdsee.css
@@ -417,7 +417,7 @@ DIV#email IMG         {padding:5px;}
     margin: 0 5px;
   }
 
-  /* Remove '<' from header(s) items at the end of the depth path. */
+  /* Remove '<' from h1 and / or h2 items at the end of the depth path. */
   #depth-path li.depth-path-header:after {
     content: ''; /* Older webkit doesn't support none. */
     content: none;
@@ -430,7 +430,7 @@ DIV#email IMG         {padding:5px;}
     padding: 0 .5ex;
   }
 
-  /* Remove trailing ':' if depth-path h1 is last item. */
+  /* Remove trailing ':' if depth-path h1 is last item (sometimes it h2). */
   #depth-path li.depth-path-header:last-child h1:after {
     content: ''; /* Older webkit doesn't support none. */
     content: none;
@@ -487,7 +487,7 @@ DIV#email IMG         {padding:5px;}
   }
 
   #mode-slide #slideshow-controls {
-    margin-left: 7px;
+    margin: 7px auto auto 7px;
   }
 
   #slideshow-buttons li {
@@ -524,10 +524,6 @@ DIV#email IMG         {padding:5px;}
     opacity: 1;
     outline: none;
     transition: all .2s ease-out;
-  }
-
-  #slideshow-buttons button:focus {
-    /* TODO: Vendor prefixes!!!! */
   }
 
   #slideshow-buttons button:before {
@@ -580,7 +576,8 @@ DIV#email IMG         {padding:5px;}
   }
 
   #slideshow-speed {
-     /* -webkit-appearance: initial; Can use menulist-button to show arrows... but then border-radius increases.  Can apply to a parent element... */
+    /* TODO: Add arrows per: http://stackoverflow.com/a/16553552/1117929 */
+    -webkit-appearance: none; /* Removes gradient from Safari. Makes Chrome respect border-radius. */
     border-radius: 3px;
     height: 24px;
     text-transform: lowercase;
@@ -749,16 +746,12 @@ DIV#email IMG         {padding:5px;}
     padding: 0 0 7px 0;
   }
 
-  #nav li:last-child {
-    float: left;
-  }
-
   #nav #depth-path {
     margin-right: 80px;
   }
 
   #mode-slide #depth-path {
-    min-height: 55px; /* Prevent buttons from overlapping. */
+    line-height: 1.2;
   }
 
   #mode-slide #slideshow-controls {
